Version 1.11.4 - Fernandina
-----------------------------
Core - General
  - Fixes problem with cms_plugins not being found in the parser
  - cms_date_format plugin is no longer cachable.
  - removes more wiki url stuff.
  - debug.log never allowed to live more than 24 hours.

Version 1.11.3 - Darwin
-----------------------------
Core - General
  - Aliases in NLS operations are now case insensitive
  - Fixes problem with editing templates/content in sitedown mode
  - Fixes problems with separators when page urls are required
  - Fixes problem with delete image in image manager after security fix
  - Fixes to the smarty parsing for templates
  - Fixes to loading of UDT's.... now load UDT's for all requests
  - Fix displaying of page title in NCleanGrey admin theme
  - Fixes to preview and submit in editcontent with lots of content blocks (particularly content_image}
  - The cms_stylesheet plugin is no longer cachable by smarty
  - Recommend PHP 5.3.2 or greater
  - Smarty caching now disabled for PHP 5.2.x
  - Numerous fixes to FileManager and MicroTiny wrt. advanced mode
  - Removes wiki links from admin interface
  - Minor fix to ShowMessages
  - Fixes so that simplex theme does not cause crash when editing content using that template, or editing the template itself
  - Ads @viewport rule to OneEleven stylesheets, improving media query behaviour on Windows 8 within Metro UI (snap mode)
  - Ads icons for apple touch link and msapplication metatag
  - OneEleven login, autofocus first input field
  - Smarty engine upgraded to 3.1.12-Stable
  - Fixes problem with smarty variables in template parser object. Edit template and edit page won't be crashing system anymore
  - #8656 - ERROR DETECTED: Call to undefined function check_persmission() multicontent.php

Version 1.11.2.1
-----------------------------
  - Fixes security vulnerability in image manager

Version 1.11.2 - Isabela 
-----------------------------
Core - General:
  - Minor fix to the en_US.nls file